--- a/vproappdep.yaml
+++ b/vproappdep.yaml
@@ -27,7 +27,7 @@ spec:
             [
               "sh",
               "-c",
-              "until nslookup vprodb: do echo waiting for mydb; sleep 2; done;",
+              "until nslookup vprodb; do echo waiting for mydb; sleep 2; done;",
             ]
         - name: init-memcache
           image: busybox
@@ -35,5 +35,5 @@ spec:
             [
               "sh",
               "-c",
-              "until nslookup vprocache01: do echo waiting for mydb; sleep 2; done;",
+              "until nslookup vprocache01; do echo waiting for mydb; sleep 2; done;",
             ]
